// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loading /> reder the <Loading.ReleaseBody /> 1`] = `null`;

exports[`<Loading /> renders the <Loading /> 1`] = `
<div
  class="sc-bdvvaa kQPKQc"
  data-testid="loading"
>
  <img
    class="sc-gsDJrp cMoROt"
    data-testid="loading-picture"
    src="/images/users//images/karl.png.png"
  />
</div>
`;

exports[`<Loading /> renders the <Loading /> component 1`] = `
<div
  class="sc-bdvvaa kQPKQc"
>
  <img
    class="sc-gsDJrp cMoROt"
    data-testid="loading-picture"
    src="/images/users//images/karl.png.png"
  />
</div>
`;

exports[`<Loading /> renders the <Loading.ReleaseBody /> 1`] = `null`;
